--- a/NotePad/src/index.html
+++ b/NotePad/src/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Hello World! 💖</h1>
-    <p id="info">
-    </p>
+    <h1>Hello from Main Window</h1>
+    Title:<input id="title" />
+    <button id="btn" type="button">Set</button>
+    <p id="info"></p>
     <script src="./renderer.js"></script>
 </body>
 </html>
