--- a/NotePad/src/index.html
+++ b/NotePad/src/index.html
@@ -11,6 +11,11 @@
     Title:<input id="title" />
     <button id="btn" type="button">Set</button>
     <p id="info"></p>
+
+    <hr/>
+    Content: <input id="content" />
+    <button id="btn2" type="button">Write</button>
+
     <script src="./renderer.js"></script>
 </body>
 </html>
